--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -64,6 +64,23 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+        <TextView
+            android:id="@+id/tvEmptyList"
+            android:textStyle="italic"
+            android:layout_centerHorizontal="true"
+            android:layout_above="@id/ivEmptyList"
+            android:layout_marginBottom="12dp"
+            android:text="@string/empty_list_cart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <ImageView
+            android:id="@+id/ivEmptyList"
+            android:layout_centerInParent="true"
+            android:src="@drawable/empty_box"
+            android:layout_width="100dp"
+            android:layout_height="100dp" />
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:background="@color/green_200"
