--- a/app/src/main/res/layout/activity_delivery_order_management.xml
+++ b/app/src/main/res/layout/activity_delivery_order_management.xml
@@ -9,26 +9,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:text="Nhập mã"
         android:paddingHorizontal="16dp"
-        app:layout_constraintTop_toTopOf="parent" />
-    <EditText
-        android:layout_marginTop="50dp"
-        android:id="@+id/etsearch"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:paddingHorizontal="16dp"
+        android:text="Danh sách đơn vận chuyển"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
 
-        android:id="@+id/rcv_user"
+        android:id="@+id/rcv_ordership"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginTop="25dp"
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
