--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="yellow_200">#FFF59D</color>
+    <color name="yellow_500">#FEC20C</color>
     <color name="green_200">#90EE90</color>
 
     <color name="red">#F44336</color>
