--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -30,7 +30,7 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/menu_cart"
+            android:text="@string/menu_order"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold"
