--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,4 @@
 <resources>
       <dimen name="fab_margin">16dp</dimen>
-   </resources>
+    <dimen name="grid_spacing">24dp</dimen>
+</resources>
