--- a/app/src/main/res/layout/activity_modify_information.xml
+++ b/app/src/main/res/layout/activity_modify_information.xml
@@ -4,6 +4,151 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/purple_200"
     tools:context=".activity.user.ModifyInformationActivity">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutBanner"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingHorizontal="16dp"
+        android:paddingTop="8dp"
+        app:layout_constraintHeight_percent=".07"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/ivBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_back"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/udpate_profile"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/feature_background"
+        android:orientation="vertical"
+        android:paddingTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layoutBanner"
+        app:layout_constraintVertical_bias=".7">
+
+        <TextView
+            android:id="@+id/tvSubTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/basic_info"
+            android:textColor="@color/purple_200"
+            android:textSize="13sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/etName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/edit_text_update"
+            android:elevation="4dp"
+            android:hint="@string/name"
+            android:paddingHorizontal="24dp"
+            android:paddingVertical="16dp"
+            android:textColorHint="@color/purple_200"
+            android:textSize="14sp"
+            app:layout_constraintTop_toBottomOf="@id/tvSubTitle" />
+
+        <EditText
+            android:id="@+id/etPhoneNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/edit_text_update"
+            android:elevation="4dp"
+            android:hint="@string/phone_number"
+            android:paddingHorizontal="24dp"
+            android:paddingVertical="16dp"
+            android:textColorHint="@color/purple_200"
+            android:textSize="14sp"
+            app:layout_constraintTop_toBottomOf="@id/etName" />
+
+        <EditText
+            android:id="@+id/etAddress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/edit_text_update"
+            android:elevation="4dp"
+            android:hint="@string/address"
+            android:paddingHorizontal="24dp"
+            android:paddingVertical="16dp"
+            android:textColorHint="@color/purple_200"
+            android:textSize="14sp"
+            app:layout_constraintTop_toBottomOf="@id/etPhoneNumber" />
+
+        <EditText
+            android:id="@+id/etPinCode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="24dp"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/edit_text_update"
+            android:elevation="4dp"
+            android:hint="@string/id"
+            android:paddingHorizontal="24dp"
+            android:paddingVertical="16dp"
+            android:textColorHint="@color/purple_200"
+            android:textSize="14sp"
+            app:layout_constraintTop_toBottomOf="@id/etAddress" />
+
+        <Button
+            android:id="@+id/btnAddFaceIdentified"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="64dp"
+            android:background="@drawable/button_background"
+            android:elevation="4dp"
+            android:layout_marginBottom="32dp"
+            android:text="@string/add_face_identified"
+            android:textAllCaps="false"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toTopOf="@id/btnUpdate" />
+
+        <Button
+            android:id="@+id/btnUpdate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="64dp"
+            android:background="@drawable/button_background"
+            android:elevation="4dp"
+            android:layout_marginBottom="40dp"
+            android:text="@string/update"
+            android:textAllCaps="false"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
